--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 :root {
-  --main-green-color: #65C466;
-  --light-color: #FFFFFF;
+  --green-color: #65C466;
+  --white-color: #FFFFFF;
   --grey-color: #A3A3A3;
   --dark-grey-color: #414141;
 
