--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,9 @@
   font-size: 13px;
   font-weight: 400;
 }
+.text-align-center{
+  text-align: center;
+}
 
 @media screen and (min-width:768px){
   :root{
